# GPU-paralelismo

./: .gitattributes  README.md  index.html
1/: 1-.md
2/: 2-.md
3/: 3-.md
4/: 4-.md
6/: 6-.md
7/: 7-.md
8/: 8-.md
demo/: CMakeLists.txt  compilar-win32.bat  executar-win32.bat  readme.md
demo/src/: main.cpp
demo/src/graphics/: graphcs_pipeline_program.cpp  graphics_compute_shader.hpp  graphics_immediate_shape.cpp  graphics_immediate_shape.hpp  graphics_pipeline_program.cpp  graphics_pipeline_program.hpp
demo/src/math/: linear_algebra.cpp  linear_algebra.hpp
demo/src/platform/: platform.cpp  platform.hpp
demo/src/scene/: world_object.cpp  world_object.hpp  world_object_cloth.cpp  world_object_cloth.hpp
sumario/: sumario.md
website/style/: viewport.css
website/ui/: glgputools.js  gloverview.js
